--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,19 @@
 }
 h1{
   font-family: dancing script;
-  font-weight: 400px;
-  font: size 1000px; ;
+  font-weight: bolder;
+  font-size: xx-large ;
 }
 h6{
   color: aqua;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: xx-large;
+  font-weight: bolder;
 }
 h3{
   background-color: blue;
   color: yellowgreen;
+  font-family: dancing script;
+  font-weight: 400px;
+  font-size: x-large;
 }
